# Projects

./: .gitignore  README.md
Programming for AI/NovaMind AI/: NovaMind AI Current Progress.txt
Programming for AI/NovaMind AI/backend/: .env.example  Dockerfile  alembic.ini  requirements.txt
Programming for AI/NovaMind AI/backend/app/: constants.py  exceptions.py  main.py
Programming for AI/NovaMind AI/backend/app/api/: deps.py
Programming for AI/NovaMind AI/backend/app/core/: config.py  logging.py  security.py
Programming for AI/NovaMind AI/backend/app/db/: base.py  session.py
Programming for AI/NovaMind AI/backend/app/models/: conversation.py  message.py  refresh_token.py  search.py  source.py  user.py
Programming for AI/NovaMind AI/docker/: docker-compose.yml
Programming for AI/Solace AI/: README.md  app.py  requirements.txt  run.py
Programming for AI/Solace AI/static/: index.html
compiler/: basic-compiler.cpp  basicII-compiler.cpp  inter-compiler.cpp
compiler/Modified-Compiler/: README.md  install.sh  mcomp  mcomp.cpp
games/mazehunt/: Mazehunt.html
games/nfs_clone/: CMakeLists.txt  README.md
games/nfs_clone/include/: ai.h  camera.h  car.h  geometry.h  gl_core.h  hud.h  math3d.h  mesh.h  shader.h  shaders.h  track.h
games/nfs_clone/src/: ai.cpp  car.cpp  gl_core.cpp  main.cpp  mesh.cpp  shader.cpp  track.cpp
games/nfs_clone/stubs/: SDL.h  gl_stub.cpp  sdl_stub.cpp
games/nfs_clone/stubs/GL/: gl.h
games/nfs_clone/tests/: debug_ai.cpp  test_camera_hud.cpp  test_car.cpp  test_math3d.cpp  test_track.cpp
(+24 files in other folders)
